CSS Fundamentals Lab Complete

--- a/style.css
+++ b/style.css
@@ -3,3 +3,44 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+
+figure {
+  text-align: center;
+  margin: 0;
+}
+
+figcaption {
+  font-size: 14px;
+  text-align: center;
+  padding: 0;
+}
+
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
+}
+
+#featured-property p {
+  text-align: center;
+  margin: auto;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  width: 800px;
+}
+
+
+
+
+div {
+  float: left;
+  text-align: center;
+  width: 25%;
+  background-color: red;
+}
+
